xmldiff (0.5.5) distribution(s); urgency=low

	* Update readme file

-- Jim Schaad <ietf@augustcellars.com>  Tue 11 June 2018 12:00:00 -0800

xmldiff (0.5.4.1) distribution(s); urgency=low

	* Correct path to the build files for C code

-- Jim Schaad <ietf@augustcellars.com>  Thur 10 May 2018 12:00:00 -0800

xmldiff (0.5.4) distribution(s); urgency=low

	* Respect whitespace in comments
	* Make everything be a fixed pitch font based on RPC request
	* Put in code to cause the right and left panels scroll based on the center scrolling

-- Jim Schaad <ietf@augustcellars.com>  Wed 9 May 2018 12:00:00 -0800

xmldiff (0.5.3) distribution(s); urgency=low

	* Move resize javascript into a separate file
	* Move debuging output to being a note so it is not always emitted
	* Fix the fact that half of the command line options are missing
	* Add missing items from the manifest to make the html work correctly.

-- Jim Schaad <ietf@augustcellars.com>  Thur 25 Apr 2018 12:00:00 -0800

xmldiff (0.5.1) distribution(s); urgency=low

	* Tag artwork and sourcecode correctly so that they are formatted as space preserving.
	* Emit the xml declaration and DOCTYPE declaration
	* Switch to a new tree paradigm as the old one did not allow needed cut and paste features.
	* Implement a button to just open modified nodes
	* Setup to have and be able to select from multiple HTML templates.

-- Jim Schaad <ietf@augustcellars.com>  Sun 28 Feb 2018 19:00:00 -0800

xmldiff (0.5.0) distribution(s); urgency=low

	* Many different css changes applied.  Changes include: resize the different columns,
	  add background coloration, wrap lines and make the tree leafs of variable height,
	  change the charset to allow Utf-8 characters.  Long term should point to the column change code,
	  but currently I don't know of a good place.
	* Format paragraphs as a single node in the tree rather than spreading them out over the tree
	  structure.  This improves readability substantially.