@@ -1,3 +1,10 @@
+xmldiff (0.5.6) distribution(s); urgency=low
+
+	* Make things look prettier
+	* Fix top of page sync bug
+
+-- Jim Schaad <ietf@augustcellars.com>  Tue 22 June 2018 12:00:00 -0800
+
 xmldiff (0.5.5) distribution(s); urgency=low
 
 	* Update readme file
